--- a/blog/himmsblog/himms/templates/blog/base.html
+++ b/blog/himmsblog/himms/templates/blog/base.html
@@ -8,15 +8,18 @@
      
  </head> 
      <body>
-         <nav class="navbar is-info">
+         <nav class="navbar is-info" >
             <div class="navbar-brand">
-                <a href="/" class="navbar-item" ><strong>Himms Blog</strong></a>
+                <a href="/" class="navbar-item" style="text-align: center;"><strong>Himms Blog</strong></a>
+             
+                 <a href="http://localhost:8000/register"  class="navbar-item" align="right"><strong>Login | Register</strong></a>  
                 
             </div>
-             
+            
          </nav>
          <section class="section">
              <div class="container">
+                <h3 style="float:right">Welcome to the World of IT</h3> 
                  {%block content%}
                  
                  {% endblock %}
@@ -24,7 +27,6 @@
              </div>
              
          </section>
-         
      </body>
  
  </html>
