--- a/blog/himmsblog/himms/templates/blog/register.html
+++ b/blog/himmsblog/himms/templates/blog/register.html
@@ -1,6 +1,5 @@
+{% extends 'blog/base.html' %}
 {% block content %} 
-
-        
 
 <!--Register--> 
 <div class="container py-5">
@@ -10,7 +9,7 @@
 		{{ register_form }}                    
 		<button class="btn btn-primary" type="submit">Register</button>
 	</form>
-	<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
+	<p class="text-center">If you already have an account, <a href="http://localhost:8000/admin/login/?next=/admin/">login</a> instead.</p>
 </div>
 
 {% endblock %}
